Shorcut, Post and Composite

--- a/roq-editor/deployment/pom.xml
+++ b/roq-editor/deployment/pom.xml
@@ -66,7 +66,7 @@
             <plugin>
                 <groupId>io.mvnpm</groupId>
                 <artifactId>esbuild-maven-plugin</artifactId>
-                <version>1.0.0</version>
+                <version>2.0.0.CR2</version>
                 <executions>
                     <execution>
                         <id>esbuild</id>
@@ -81,316 +81,11 @@
                     <entryPoint>bundle.js</entryPoint>
                 </configuration>
                 <dependencies>
-                    <dependency>
-                        <groupId>org.mvnpm.at.tiptap</groupId>
-                        <artifactId>core</artifactId>
-                        <version>${tiptap.version}</version>
-                    </dependency>
-                    <dependency>
-                        <groupId>org.mvnpm.at.tiptap</groupId>
-                        <artifactId>starter-kit</artifactId>
-                        <version>${tiptap.version}</version>
-                    </dependency>
-                    <dependency>
-                        <groupId>org.mvnpm.at.tiptap</groupId>
-                        <artifactId>markdown</artifactId>
-                        <version>${tiptap.version}</version>
-                    </dependency>
-                    <dependency>
-                        <groupId>org.mvnpm.at.tiptap</groupId>
-                        <artifactId>extension-image</artifactId>
-                        <version>${tiptap.version}</version>
-                    </dependency>
-                    <dependency>
-                        <groupId>org.mvnpm.at.tiptap</groupId>
-                        <artifactId>extension-drag-handle</artifactId>
-                        <version>${tiptap.version}</version>
-                    </dependency>
-                    <dependency>
-                        <groupId>org.mvnpm.at.tiptap</groupId>
-                        <artifactId>extension-bubble-menu</artifactId>
-                        <version>${tiptap.version}</version>
-                    </dependency>
-                    <dependency>
-                        <groupId>org.mvnpm.at.tiptap</groupId>
-                        <artifactId>extension-table</artifactId>
-                        <version>${tiptap.version}</version>
-                    </dependency>
-                    <dependency>
-                        <groupId>org.mvnpm.at.tiptap</groupId>
-                        <artifactId>extension-table-row</artifactId>
-                        <version>${tiptap.version}</version>
-                    </dependency>
-                    <dependency>
-                        <groupId>org.mvnpm.at.tiptap</groupId>
-                        <artifactId>extension-table-cell</artifactId>
-                        <version>${tiptap.version}</version>
-                    </dependency>
-                    <dependency>
-                        <groupId>org.mvnpm.at.tiptap</groupId>
-                        <artifactId>extension-table-header</artifactId>
-                        <version>${tiptap.version}</version>
-                    </dependency>
-                    <dependency>
-                        <groupId>org.mvnpm.at.tiptap</groupId>
-                        <artifactId>extension-code-block-lowlight</artifactId>
-                        <version>${tiptap.version}</version>
-                    </dependency>
-                    <dependency>
-                        <groupId>org.mvnpm.at.tiptap</groupId>
-                        <artifactId>suggestion</artifactId>
-                        <version>${tiptap.version}</version>
-                    </dependency>
+
                     <dependency>
                         <groupId>org.mvnpm.at.lit</groupId>
                         <artifactId>context</artifactId>
                         <version>1.1.6</version>
-                    </dependency>
-                    <!-- this can be removed when we have transitive dependencies -->
-                    <dependency>
-                        <groupId>org.mvnpm.at.tiptap</groupId>
-                        <artifactId>extension-link</artifactId>
-                        <version>${tiptap.version}</version>
-                    </dependency>
-                    <dependency>
-                        <groupId>org.mvnpm.at.tiptap</groupId>
-                        <artifactId>pm</artifactId>
-                        <version>${tiptap.version}</version>
-                    </dependency>
-                    <dependency>
-                        <groupId>org.mvnpm.at.tiptap</groupId>
-                        <artifactId>extension-text</artifactId>
-                        <version>${tiptap.version}</version>
-                    </dependency>
-                    <dependency>
-                        <groupId>org.mvnpm.at.tiptap</groupId>
-                        <artifactId>extension-underline</artifactId>
-                        <version>${tiptap.version}</version>
-                    </dependency>
-                    <dependency>
-                        <groupId>org.mvnpm.at.tiptap</groupId>
-                        <artifactId>extensions</artifactId>
-                        <version>${tiptap.version}</version>
-                    </dependency>
-                    <dependency>
-                        <groupId>org.mvnpm.at.tiptap</groupId>
-                        <artifactId>extension-blockquote</artifactId>
-                        <version>${tiptap.version}</version>
-                    </dependency>
-                    <dependency>
-                        <groupId>org.mvnpm.at.tiptap</groupId>
-                        <artifactId>extension-code</artifactId>
-                        <version>${tiptap.version}</version>
-                    </dependency>
-                    <dependency>
-                        <groupId>org.mvnpm.at.tiptap</groupId>
-                        <artifactId>extension-code-block</artifactId>
-                        <version>${tiptap.version}</version>
-                    </dependency>
-                    <dependency>
-                        <groupId>org.mvnpm.at.tiptap</groupId>
-                        <artifactId>extension-bold</artifactId>
-                        <version>${tiptap.version}</version>
-                    </dependency>
-                    <dependency>
-                        <groupId>org.mvnpm.at.tiptap</groupId>
-                        <artifactId>extension-strike</artifactId>
-                        <version>${tiptap.version}</version>
-                    </dependency>
-                    <dependency>
-                        <groupId>org.mvnpm.at.tiptap</groupId>
-                        <artifactId>extension-document</artifactId>
-                        <version>${tiptap.version}</version>
-                    </dependency>
-                    <dependency>
-                        <groupId>org.mvnpm.at.tiptap</groupId>
-                        <artifactId>extension-hard-break</artifactId>
-                        <version>${tiptap.version}</version>
-                    </dependency>
-                    <dependency>
-                        <groupId>org.mvnpm.at.tiptap</groupId>
-                        <artifactId>extension-heading</artifactId>
-                        <version>${tiptap.version}</version>
-                    </dependency>
-                    <dependency>
-                        <groupId>org.mvnpm.at.tiptap</groupId>
-                        <artifactId>extension-italic</artifactId>
-                        <version>${tiptap.version}</version>
-                    </dependency>
-                    <dependency>
-                        <groupId>org.mvnpm.at.tiptap</groupId>
-                        <artifactId>extension-horizontal-rule</artifactId>
-                        <version>${tiptap.version}</version>
-                    </dependency>
-                    <dependency>
-                        <groupId>org.mvnpm.at.tiptap</groupId>
-                        <artifactId>extension-paragraph</artifactId>
-                        <version>${tiptap.version}</version>
-                    </dependency>
-                    <dependency>
-                        <groupId>org.mvnpm.at.tiptap</groupId>
-                        <artifactId>extension-list</artifactId>
-                        <version>${tiptap.version}</version>
-                    </dependency>
-                    <dependency>
-                        <groupId>org.mvnpm</groupId>
-                        <artifactId>prosemirror-state</artifactId>
-                        <version>1.4.4</version>
-                    </dependency>
-                    <dependency>
-                        <groupId>org.mvnpm</groupId>
-                        <artifactId>prosemirror-dropcursor</artifactId>
-                        <version>1.8.2</version>
-                    </dependency>
-                    <dependency>
-                        <groupId>org.mvnpm</groupId>
-                        <artifactId>prosemirror-history</artifactId>
-                        <version>1.5.0</version>
-                    </dependency>
-                    <dependency>
-                        <groupId>org.mvnpm</groupId>
-                        <artifactId>prosemirror-view</artifactId>
-                        <version>1.41.4</version>
-                    </dependency>
-                    <dependency>
-                        <groupId>org.mvnpm</groupId>
-                        <artifactId>prosemirror-gapcursor</artifactId>
-                        <version>1.4.0</version>
-                    </dependency>
-                    <dependency>
-                        <groupId>org.mvnpm</groupId>
-                        <artifactId>prosemirror-model</artifactId>
-                        <version>1.25.4</version>
-                    </dependency>
-                    <dependency>
-                        <groupId>org.mvnpm</groupId>
-                        <artifactId>prosemirror-transform</artifactId>
-                        <version>1.10.5</version>
-                    </dependency>
-                    <dependency>
-                        <groupId>org.mvnpm</groupId>
-                        <artifactId>prosemirror-keymap</artifactId>
-                        <version>1.2.3</version>
-                    </dependency>
-                    <dependency>
-                        <groupId>org.mvnpm</groupId>
-                        <artifactId>prosemirror-schema-list</artifactId>
-                        <version>1.5.1</version>
-                    </dependency>
-                    <dependency>
-                        <groupId>org.mvnpm</groupId>
-                        <artifactId>prosemirror-commands</artifactId>
-                        <version>1.7.1</version>
-                    </dependency>
-                    <dependency>
-                        <groupId>org.mvnpm</groupId>
-                        <artifactId>w3c-keyname</artifactId>
-                        <version>2.2.8</version>
-                    </dependency>
-                    <dependency>
-                        <groupId>org.mvnpm</groupId>
-                        <artifactId>rope-sequence</artifactId>
-                        <version>1.3.4</version>
-                    </dependency>
-                    <dependency>
-                        <groupId>org.mvnpm</groupId>
-                        <artifactId>orderedmap</artifactId>
-                        <version>2.1.1</version>
-                    </dependency>
-                    <dependency>
-                        <groupId>org.mvnpm</groupId>
-                        <artifactId>linkifyjs</artifactId>
-                        <version>4.3.2</version>
-                    </dependency>
-                    <dependency>
-                        <groupId>org.mvnpm</groupId>
-                        <artifactId>marked</artifactId>
-                        <version>15.0.12</version>
-                    </dependency>
-                    <dependency>
-                        <groupId>org.mvnpm.at.floating-ui</groupId>
-                        <artifactId>dom</artifactId>
-                        <version>1.7.4</version>
-                    </dependency>
-                    <dependency>
-                        <groupId>org.mvnpm.at.floating-ui</groupId>
-                        <artifactId>utils</artifactId>
-                        <version>0.2.10</version>
-                    </dependency>
-                    <dependency>
-                        <groupId>org.mvnpm.at.floating-ui</groupId>
-                        <artifactId>core</artifactId>
-                        <version>1.7.3</version>
-                    </dependency>
-                    <dependency>
-                        <groupId>org.mvnpm</groupId>
-                        <artifactId>prosemirror-tables</artifactId>
-                        <version>1.8.3</version>
-                    </dependency>
-                    <dependency>
-                        <groupId>org.mvnpm</groupId>
-                        <artifactId>isomorphic.js</artifactId>
-                        <version>0.2.5</version>
-                    </dependency>
-                    <dependency>
-                        <groupId>org.mvnpm</groupId>
-                        <artifactId>y-protocols</artifactId>
-                        <version>1.0.6</version>
-                    </dependency>
-                    <dependency>
-                        <groupId>org.mvnpm</groupId>
-                        <artifactId>yjs</artifactId>
-                        <version>13.6.27</version>
-                    </dependency>
-                    <dependency>
-                        <groupId>org.mvnpm.at.tiptap</groupId>
-                        <artifactId>extension-collaboration</artifactId>
-                        <version>${tiptap.version}</version>
-                    </dependency>
-                    <dependency>
-                        <groupId>org.mvnpm.at.tiptap</groupId>
-                        <artifactId>extension-node-range</artifactId>
-                        <version>${tiptap.version}</version>
-                    </dependency>
-                    <dependency>
-                        <groupId>org.mvnpm.at.tiptap</groupId>
-                        <artifactId>y-tiptap</artifactId>
-                        <version>3.0.1</version>
-                    </dependency>
-                    <dependency>
-                        <groupId>org.mvnpm</groupId>
-                        <artifactId>lib0</artifactId>
-                        <version>0.2.115</version>
-                    </dependency>
-                    <dependency>
-                        <groupId>org.mvnpm</groupId>
-                        <artifactId>lowlight</artifactId>
-                        <version>3.3.0</version>
-                    </dependency>
-                    <dependency>
-                        <groupId>org.mvnpm</groupId>
-                        <artifactId>highlight.js</artifactId>
-                        <version>11.11.1</version>
-                    </dependency>
-                    <dependency>
-                        <groupId>org.mvnpm.at.types</groupId>
-                        <artifactId>hast</artifactId>
-                        <version>3.0.4</version>
-                    </dependency>
-                    <dependency>
-                        <groupId>org.mvnpm</groupId>
-                        <artifactId>devlop</artifactId>
-                        <version>1.1.0</version>
-                    </dependency>
-                    <dependency>
-                        <groupId>org.mvnpm.at.types</groupId>
-                        <artifactId>unist</artifactId>
-                        <version>3.0.3</version>
-                    </dependency>
-                    <dependency>
-                        <groupId>org.mvnpm</groupId>
-                        <artifactId>dequal</artifactId>
-                        <version>2.0.3</version>
                     </dependency>
                     <dependency>
                         <groupId>org.mvnpm.at.lit</groupId>
@@ -401,6 +96,11 @@
                         <groupId>org.mvnpm.at.lit-labs</groupId>
                         <artifactId>ssr-dom-shim</artifactId>
                         <version>1.4.0</version>
+                    </dependency>
+                    <dependency>
+                        <groupId>org.mvnpm.at.mvnpm</groupId>
+                        <artifactId>tiptap</artifactId>
+                        <version>3.12.1</version>
                     </dependency>
                 </dependencies>
             </plugin>
