--- a/roq-editor/runtime/src/main/resources/META-INF/quarkus-extension.yaml
+++ b/roq-editor/runtime/src/main/resources/META-INF/quarkus-extension.yaml
@@ -1,9 +1,12 @@
 name: Roq Editor
-description: Editor for Roq.
+description: Rich-Text Content editor for Roq.
 metadata:
   keywords:
     - roq
     - editor
+    - cms
+    - dev-io
+    - dev
   guide: https://docs.quarkiverse.io/quarkus-roq/dev/quarkus-roq-editor.html
   icon-url: "https://raw.githubusercontent.com/quarkiverse/quarkus-roq/main/docs/modules/ROOT/assets/images/roq.svg"
   categories:
