--- a/roq-editor/deployment/pom.xml
+++ b/roq-editor/deployment/pom.xml
@@ -102,6 +102,11 @@
                         <artifactId>tiptap</artifactId>
                         <version>3.12.1</version>
                     </dependency>
+                    <dependency>
+                        <groupId>org.mvnpm</groupId>
+                        <artifactId>yaml</artifactId>
+                        <version>2.7.1</version>
+                    </dependency>
                 </dependencies>
             </plugin>
         </plugins>
