added ai command to the editor using chappie
Signed-off-by: Erik Jan de Wit <erikjan.dewit@gmail.com>

--- a/blog/config/application.properties
+++ b/blog/config/application.properties
@@ -7,3 +7,6 @@ quarkus.asciidoc.attributes.source-highlighter=highlight.js
 site.slugify-files=false
 %dev.site.draft=true
 %dev.site.future=true
+
+# Use Podman instead of Docker for dev services
+quarkus.devservices.container-runtime=podman
