--- a/roq-editor/runtime/pom.xml
+++ b/roq-editor/runtime/pom.xml
@@ -37,6 +37,10 @@
             <groupId>io.vertx</groupId>
             <artifactId>vertx-web-client</artifactId>
         </dependency>
+        <dependency>
+            <groupId>io.quarkus</groupId>
+            <artifactId>quarkus-assistant-dev</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
